--- a/SocialDining/Base.lproj/Main.storyboard
+++ b/SocialDining/Base.lproj/Main.storyboard
@@ -377,7 +377,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5YC-FK-2OQ">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5YC-FK-2OQ">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <barButtonItem title="Back" id="yDy-44-AQ3">
@@ -387,11 +387,20 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="nBz-IE-dhe">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="nBz-IE-dhe">
                                 <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nBz-IE-dhe" firstAttribute="trailing" secondItem="5YC-FK-2OQ" secondAttribute="trailing" id="27i-1w-aq4"/>
+                            <constraint firstItem="5YC-FK-2OQ" firstAttribute="leading" secondItem="UHR-xG-fuE" secondAttribute="leading" id="A1J-N4-9wD"/>
+                            <constraint firstItem="5YC-FK-2OQ" firstAttribute="top" secondItem="e24-jc-DzF" secondAttribute="bottom" id="B3g-rd-U17"/>
+                            <constraint firstItem="nBz-IE-dhe" firstAttribute="top" secondItem="5YC-FK-2OQ" secondAttribute="bottom" id="SQK-TS-ugh"/>
+                            <constraint firstAttribute="trailing" secondItem="5YC-FK-2OQ" secondAttribute="trailing" id="YBA-PX-t5m"/>
+                            <constraint firstItem="nBz-IE-dhe" firstAttribute="leading" secondItem="5YC-FK-2OQ" secondAttribute="leading" id="bLD-NW-nyX"/>
+                            <constraint firstItem="nBz-IE-dhe" firstAttribute="bottom" secondItem="bp7-Qe-2Xf" secondAttribute="top" id="xt6-BO-moK"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Map" image="second" id="46h-j7-fqb"/>
                 </viewController>
@@ -433,16 +442,19 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z1H-hQ-hi0">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="yVW-gM-f75"/>
                                     <barButtonItem title="Back" id="0nb-Ka-vou">
                                         <connections>
                                             <action selector="dismiss:" destination="lVS-i3-qMS" id="hSJ-mM-JlJ"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="zWW-WL-Ein"/>
                                     <barButtonItem title="|" style="plain" id="mjZ-A6-tLS">
                                         <color key="tintColor" red="0.3939985795" green="0.3939985795" blue="0.3939985795" alpha="1" colorSpace="calibratedRGB"/>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Tfx-JE-jTi"/>
                                     <barButtonItem title="Finalize Date" id="wKj-sw-FNE"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="olh-Tn-tlp"/>
                                     <barButtonItem title="|" id="IjC-CF-hlg">
                                         <color key="tintColor" red="0.3939985795" green="0.3939985795" blue="0.3939985795" alpha="1" colorSpace="calibratedRGB"/>
                                     </barButtonItem>
@@ -557,7 +569,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PfY-rS-3To" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1430" y="511"/>
+            <point key="canvasLocation" x="1492" y="1275"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="9tf-zT-iwT">
